# leaning_python

./: decorator.py  pyproject.toml
OOP/: 2_methods_and_functions.py  3__init__.py  4_monostate.py  6_getattr,_setattr_decorators.py  7_dunder_methods.py  Incapsulation.py  methods.py  object and classes.py
python/: 2_function_open.py  3_annotations.py  api copy.txt  api.txt  function_open.py  introduction.py
